<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_log_masuk"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:id="@+id/tvLogin"
        />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/masukkan_nama_pengguna"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/masukkan_kata_laluan"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_masuk"
        android:layout_below="@id/editPassword"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonLogin"
        />
</RelativeLayout>